--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -57,3 +57,55 @@ footer div {
 footer a {
     color: #024e76;
 }
+section{
+    padding: 60px;
+
+}
+/* Hero Style Start */
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+/* Hero Style End */
+.hero-form{
+    background-color: #fce138;
+    color:#024e76;
+    width: 500px;
+    padding: 20px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #024e76;
+    position: absolute;
+    bottom: 120px;
+    right: 140px;
+}
+.hero-form h3 {
+    font-size: 24 px;
+    margin: 0px;
+}
+.hero-form p {
+    margin: 5px 0 15px 0;
+}
+.hero-form label {
+    margin: 0 5px;
+}
+.form-input {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: 024e76;
+    width: 100%;
+
+}
+.hero-form button {
+    color: #fce138;
+    background-color: #024e76;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+}
+/* Hero Styles End */
