--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -125,17 +125,16 @@ section{
     background: #fce138;
 }
 
-}
 .section-title {
     font-size: 55px;
-    color: #024e76
+    color: #024e76;
     padding: 0 100px 20px 100px;
     display: inline-block;
     border-bottom: 3px solid;
     margin-bottom: 35px;
 }
 .primary-border {
-    border-color: #fce138
+    border-color: #fce138;
 }
 .secondary-border {
     border-color: #39a6b2;
