adding flexbox to content

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -132,9 +132,6 @@ section{
     padding: 10px 20px;
     font-size: 16px;
 }
-.intro {
-    text-align: center;
-}
 
 }
 .intro p{
@@ -143,19 +140,20 @@ section{
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
 .section-title {
     font-size: 55px;
     color: #024e76;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
-    margin-bottom: 35px;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 .primary-border {
     border-color: #fce138;
@@ -188,9 +186,13 @@ section{
 }
 /* Hero Styles End */
 
+.flex-row {
+    display:flex;
+}
+
 /* Trainers Styling Begins */
 .trainers {
-    text-align: center;
+
 }
 
 .trainer {
@@ -240,7 +242,7 @@ section{
 
 /* Reach out styles start */
 .contact {
-    text-align: center;
+
     background: #024e76;
     
 }
