--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -3,6 +3,27 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* Media Query for Smaller Desktop Screens and Smaller */
+@media screen and (max-width:980px) {
+    header h1 a {
+        color: tomato;
+    }
+    
+}
+
+/* Media Query for Tablets and Smaller */
+@media screen and (max-width: 768px) {
+    header h1 {
+        font-size: 80px;
+    }
+}
+
+/* Media Query for Phones and Smaller */
+@media screen and (max-width: 575px) {
+    header 1 {
+        font-size: 100px
+    }
+}
 
 /* apply styles to <header> */
 header {
@@ -34,7 +55,7 @@ header nav ul {
     list-style: none;
 }
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -77,6 +98,7 @@ section{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-cta {
@@ -85,7 +107,7 @@ section{
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 
 }
 
@@ -156,7 +178,7 @@ section{
 }
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
