--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -3,27 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-/* Media Query for Smaller Desktop Screens and Smaller */
-@media screen and (max-width:980px) {
-    header h1 a {
-        color: tomato;
-    }
-    
-}
 
-/* Media Query for Tablets and Smaller */
-@media screen and (max-width: 768px) {
-    header h1 {
-        font-size: 80px;
-    }
-}
-
-/* Media Query for Phones and Smaller */
-@media screen and (max-width: 575px) {
-    header 1 {
-        font-size: 100px
-    }
-}
 
 /* apply styles to <header> */
 header {
@@ -354,4 +334,102 @@ section{
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+}
+
+/* Media Query for Smaller Desktop Screens and Smaller */
+@media screen and (max-width:980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+    }
+    header h1 {
+        width: 100%;
+        text-align: center;
+    }
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+
+    header nav ul li a {
+        text-align: center;
+        width: 100%;
+
+    }
+    .hero-cta, .hero-form {
+        width: 100%;
+    }
+
+    .hero-cta{
+        text-align: center;
+    }
+
+    .section-title {
+        width: 80%;
+    }
+
+    .trainer {
+        flex: 0 70%;
+    }
+
+    .contact-info iframe {
+        flex: 1 100%;
+    }
+}
+
+/* Media Query for Tablets and Smaller */
+@media screen and (max-width: 768px) {
+    section {
+        padding: 30px 15px;
+    }
+
+    .step h3 {
+        flex: 1 100%;
+        text-align: center;
+      }
+    
+      .step-info {
+        flex: 2 100%;
+        text-align: center;
+        justify-content: center;
+      }
+    
+      .step-img {
+        flex: 0 32%;
+        margin-right: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
+      }
+    
+      .step-text {
+        flex: 100%;  
+      }
+
+}
+
+/* Media Query for Phones and Smaller */
+@media screen and (max-width: 575px) {
+    .hero-form button {
+        width: 100%;
+    }
+    .section-title {
+        width: 95%;
+    }
+    .intro p {
+        width: 100%;
+    }
+    .trainer {
+        flex: 0 100%;
+    }
+    .contact-info {
+        text-align: center;
+    }
+    .contact-info > * {
+        flex: 0 100%;
+    }
+    .contact-form {
+        order: 3;
+    }
+
 }
