--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -271,6 +271,20 @@ section{
     text-align: right;
 }
 
+/* Service Grid styles start */
+.service-grid-container {
+    display: grid;
+}
+
+.service-grid-item {
+    width: 200 px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+}
+
+
 /* Reach out styles start */
 .contact {
 
