--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -273,15 +273,31 @@ section{
 
 /* Service Grid styles start */
 .service-grid-container {
+    max-width: 940px;
+    margin: 0 auto;
     display: grid;
-}
+    grid-template-columns: 200px repeat(2, 1fr);
+    grid-template-rows: repeat(4, 5rem);
+    grid-gap: 10px;
+    grid-auto-flow: column;
+  }
 
 .service-grid-item {
-    width: 200 px;
-    height: 50px;
     background-color: orange;
     border: solid;
+    padding: 1em;
     color: black;
+    
+}
+
+.box1 {
+    grid-column: 1/2;
+    grid-row: 1/3;
+}
+
+.box2 {
+    grid-column: 3/4;
+    grid-row: 1/-1;
 }
 
 
