--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -12,12 +12,20 @@ header {
     display:flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-position: fixed;
+    background-size: cover;
+    background-position: 80%;
+    background-attachment: fixed;
 }
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
 }
 header a {
@@ -38,7 +46,16 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
 }
+
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+}
+
 body {
     /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
@@ -75,6 +92,8 @@ section{
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -88,7 +107,7 @@ section{
     color: #fff;
     font-size: 18px;
     line-height: 1.2;
-
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
 }
 
 .hero-cta h2 {
@@ -98,13 +117,15 @@ section{
 }
 /* Hero Style End */
 .hero-form{
-    background-color: #fce138;
+    background-color: rgba(252,225,56, 0.8);
     color:#024e76;
     padding: 20px;
     border-style: solid;
     border-width: 3px;
     border-color: #024e76;
+    border-radius: 15px;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
 }
 .hero-form h3 {
     font-size: 24 px;
@@ -123,16 +144,26 @@ section{
     font-size: 16px;
     color: 024e76;
     width: 100%;
-
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75)
 }
+
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+}
+
 .hero-form button {
     color: #fce138;
     background-color: #024e76;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
 }
 
+.hero-form button:hover {
+    background-color: #39a6b2;
 }
 .intro p{
     line-height: 1.7;
@@ -149,12 +180,16 @@ section{
 .step {
     margin: 50px auto;
     padding-bottom: 50px;
-    width: 80%;
     border-bottom: 1px solid #39a6b2;
+    width: 80%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+}
+
+.step:last-child {
+    border-bottom: none;
 }
 
 .section-title {
@@ -373,6 +408,7 @@ section{
 
   .contact-form input, .contact-form textarea{
       border: 1px solid #024e76;
+      background-color: rgba(255,255,255, 0.75);
       display: block;
       padding: 7px 15px;
       font-size: 16px;
@@ -380,6 +416,17 @@ section{
       width: 100%;
       margin-bottom: 15px;
       margin-top: 5px;
+      border-radius: 10px;
+  }
+
+  .contact-form input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+  }
+
+  .contact-form textarea:focus{
+    background-color: rgba(255,255,255, 1);
+    outline: none; 
   }
   
 .contact-form button {
@@ -390,13 +437,17 @@ section{
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
 }
+
+
 
 /* Media Query for Smaller Desktop Screens and Smaller */
 @media screen and (max-width:980px) {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }
     header h1 {
         width: 100%;
@@ -435,6 +486,7 @@ section{
 }
 
 /* Media Query for Tablets and Smaller */
+
 @media screen and (max-width: 768px) {
     section {
         padding: 30px 15px;
