--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,208 +1,244 @@
-* {
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+  }
+  
+  * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-
-/* apply styles to <header> */
-header {
-    padding: 20px 35 px;
-    background-color: #39a6b2;
-    display:flex;
+  }
+  
+  body {
+    color: var(--tertiary-color);
+    font-family: Helvetica, Arial, sans-serif;
+  }
+  
+  
+  /* HEADER / NAV BAR STYLES START */
+  
+  header {
+    padding: 20px 35px;
+    background-color: var(--tertiary-color);
+    display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
     background-image: url("../images/hero-bg.jpg");
-    background-position: fixed;
     background-size: cover;
-    background-position: 80%;
     background-attachment: fixed;
+    background-position: 80%;
     z-index: 9999;
-}
-header h1 {
+  }
+  
+  header h1 {
     font-weight: bold;
-    font-size: 36px;
-    color: #fce138;
     margin: 0;
+    font-size: 36px;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-
-}
-header a {
+  }
+  
+  header a {
     text-decoration: none;
-    color: #fce138
-}
-header nav {
+    color: var(--primary-color);
+  }
+  
+  header nav {
     margin: 7px 0;
-}
-header nav ul {
+  }
+  
+  header nav ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     list-style: none;
-}
-header nav ul li a {
+  }
+  
+  header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
-}
-
-header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  header nav ul li a:hover {
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
-}
-
-body {
-    /* more on this crazy alphanumerical value in a minute! */
-    color: #39a6b2;
-    font-family: Helvetica, Arial, sans-serif;
-    
-}
-footer {
-    background: #fce138;
-    width: 100%;
+  }
+  
+  /* HEADER / NAVBAR STYLES END */
+  
+  
+  
+  /* FOOTER STYLES START */
+  footer {
+    background: var(--primary-color);
     padding: 40px 35px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-}
-footer h2{
-    color #024e76;
+    width: 100%;
+  }
+  
+  footer h2 {
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
-   
-}
-footer div {
+  }
+  
+  footer div {
     line-height: 1.5;
     text-align: right;
-}
-footer a {
-    color: #024e76;
-}
-section{
+  }
+  
+  footer a {
+    color: var(--secondary-color);
+  }
+  /* END FOOTER STYLES */
+  
+  /* STYLE ALL SECTION TAGS */
+  section {
     padding: 60px;
-
-}
-/* Hero Style Start */
-.hero {
-    background-image: url("../images/hero-bg.jpg");
+  }
+  
+  /* HERO STYLES START */
+  .hero {
+    background-image: url('../images/hero-bg.jpg');
     background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    background-position: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
-}
-
-.hero-cta {
+    background-attachment: fixed;
+    background-position: 80%;
+  }
+  
+  .hero-cta {
     width: 35%;
     text-align: right;
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
     line-height: 1.2;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
-}
-
-.hero-cta h2 {
+  }
+  
+  .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
-}
-/* Hero Style End */
-.hero-form{
-    background-color: rgba(252,225,56, 0.8);
-    color:#024e76;
+    color: var(--primary-color);
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  .hero-form {
+    border: 3px solid var(--secondary-color);
+    background-color: rgba(255, 225, 56, 0.8);
     padding: 20px;
-    border-style: solid;
-    border-width: 3px;
-    border-color: #024e76;
-    border-radius: 15px;
+    color: var(--secondary-color);
+    width: 40%;
     margin: 3.5%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
-}
-.hero-form h3 {
-    font-size: 24 px;
-    margin: 0px;
-}
-.hero-form p {
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  .hero-form button:hover {
+    background-color: var(--tertiary-color);  
+  }
+  
+  .hero-form h3 {
+    font-size: 24px;
+    margin: 0;
+  }
+  .hero-form p {
     margin: 5px 0 15px 0;
-}
-.hero-form label {
-    margin: 0 5px;
-}
-.form-input {
-    border: 1px solid #024e76;
+  }
+  
+  .form-input {
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: 024e76;
+    color: var(--secondary-color);
     width: 100%;
+    margin-bottom: 15px; 
     border-radius: 10px;
-    background-color: rgba(255,255,255, 0.75)
-}
-
-.form-input:focus {
+    background-color: rgba(255,255,255, 0.75);
+  }
+  
+  .form-input:focus {
     background-color: rgba(255,255,255, 1);
     outline: none;
-}
-
-.checkbox-wrapper input, .radio-wrapper input {
+  }
+  
+  .hero-form label {
+    margin: 0 5px;
+  }
+  
+  .hero-form button {
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 10px;
+  } 
+  
+  .checkbox-wrapper input, .radio-wrapper input {
     opacity: 0;
-}
-
-.checkbox-wrapper label, .radio-wrapper label {
+  }
+  
+  .checkbox-wrapper label, .radio-wrapper label {
     position: relative;
     left: 10px;
     margin: 10px;
     line-height: 1.6;
-}
-
-.checkbox-wrapper label::before, .radio-wrapper label::before {
+  }
+  
+  .checkbox-wrapper label::before, .radio-wrapper label::before {
     content: "";
     height: 20px;
     width: 20px;
-    background: rgba(255,255,255, 0.75);
-    border: 1px solid #024e76;
+    background: rgba(255, 255, 255, 0.75);  
+    border: 1px solid var(--secondary-color);  
     position: absolute;
     top: -4px;
     left: -30px;
-}
-
-.radio-wrapper label::before{
+  }
+  
+  .radio-wrapper label::before {
     border-radius: 50%;
-}
-
-.radio-wrapper label::after {
+  }
+  
+  .radio-wrapper label::after {
     content: "";
-    width: 20px;
     height: 20px;
+    width: 20px;
     border-radius: 50%;
-    background-image: radial-gradient(circle, #39a6b2, #024e76);
+    background: var(--secondary-color);
     position: absolute;
     left: -29px;
     top: -3px;
+    background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
   }
   
   .checkbox-wrapper label::after {
     content: "";
     height: 6px;
     width: 14px;
-    border-left: 2px solid #024e76;
-    border-bottom: 2px solid #024e76;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
     position: absolute;
     left: -26px;
     top: 1px;
     transform: rotate(-58deg);
   }
-
+  
   .checkbox-wrapper input + label::after, 
   .radio-wrapper input + label::after {
     content: none;
@@ -212,246 +248,223 @@ section{
   .radio-wrapper input:checked + label::after {
     content: "";
   }
-
-.hero-form button {
-    color: #fce138;
-    background-color: #024e76;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 10px;
-}
-
-.hero-form button:hover {
-    background-color: #39a6b2;
-}
-.intro p{
-    line-height: 1.7;
-    color: #39a6b2;
-    width: 80%;
-    font-size: 20px;
-    margin: 0 auto;
+  /* HERO STYLES END */
+  
+  
+  /* SECTION TITLE STYLES START */
+  .section-title {
+    font-size: 48px;
+    border-bottom: 3px solid;
+    color: var(--secondary-color);
+    padding-bottom: 20px;
     text-align: center;
-}
-.steps {
-    background: #fce138;
-}
-
-.step {
+    margin: 0 auto 35px auto;
+    width: 50%;
+  }
+  
+  .primary-border {
+    border-color: var(--primary-color);
+  }
+  
+  .secondary-border {
+    border-color: var(--tertiary-color);
+  }
+  /* SECTION TITLE STYLES END */
+  
+  /* WHAT WE DO STYLES */
+  
+  .intro p {
+    line-height: 1.7;
+    color: var(--tertiary-color);
+    width: 80%;
+    margin: 0 auto;
+    font-size: 20px;
+    text-align: center;
+  }
+  /* WHAT YOU DO STYLES END */
+  
+  
+  /* WHAT YOU DO STYLES START */
+  .steps { 
+    background: var(--primary-color);
+  }
+  
+  .step {
     margin: 50px auto;
     padding-bottom: 50px;
-    border-bottom: 1px solid #39a6b2;
     width: 80%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-}
-
-.step:last-child {
-    border-bottom: none;
-}
-
-.section-title {
-    font-size: 48px;
-    color: #024e76;
-    border-bottom: 3px solid;
-    padding-bottom: 20px;
-    text-align: center;
-    margin: 0 auto 35px auto;
-    width: 50%;
-}
-.primary-border {
-    border-color: #fce138;
-}
-.secondary-border {
-    border-color: #39a6b2;
-}
-
-
-
-
-
-.step h3 {
-    color: #024e76;
+  }
+  
+  .step:not(:last-child) {
+    border-bottom: 1px solid var(--tertiary-color);
+  }
+  
+  .step h3 {
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
-}
-
-.step-info {
+  }
+  
+  .step-info {
+    flex: 2 70%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    flex: 2 70%;
-}
-
-.step-img {
+  }
+  
+  .step-img {
     flex: 1 12%;
     margin-right: 20px;
-
-}
-
-.step-img img {
+  }
+  
+  .step-img img {
     max-width: 100%;
-}
-
-.step-text {
+  }
+  
+  .step-text {
     flex: 12;
-}
-
-.step-text h4{
+  }
+  
+  .step-text p {
+    color: var(--tertiary-color);
+    font-size: 18px;
+  }
+  
+  .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
-}
-
-.step-text p {
-    color: #39a6b2;
-    font-size: 18px;
-}
-
-/* Hero Styles End */
-
-.flex-row {
-    display:flex;
-}
-
-/* Trainers Styling Begins */
-.trainers {
+    color: var(--secondary-color);
+  }
+  
+  /* WHAT YOU DO STYLES END */
+  
+  /* MEET THE TRAINERS START */
+  .trainers {
     width: 100%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-}
-
-.trainer {
-    flex: 1;
+  }
+  
+  .trainer {
     margin: 20px;
-    background: #024e76;
-    color: #fce138
-}
-
-.trainer img {
+    flex: 1;
+    background: var(--secondary-color);
+    color: var(--primary-color);
+  }
+  
+  .trainer img {
     width: 100%;
-}
-
-.trainer-bio {
+  }
+  
+  .trainer-bio {
     padding: 25px;
     line-height: 1.3;
-}
-
-.trainer-bio h3 {
+  }
+  
+  .trainer-bio h3 {
     font-size: 28px;
-}
-
-.trainer-bio h4 {
+  }
+  
+  .trainer-bio h4 {
     font-weight: lighter;
     font-size: 22px;
     margin-bottom: 15px;
-
-}
-
-.trainer-bio p {
+  }
+  
+  .trainer-bio p {
     font-size: 17px;
-
-}
-
-
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
-/* Service Grid styles start */
-.services {
-    background: #fce138;
-}
-
-.service-grid-wrapper {
+  }
+  /* TRAINER STYLES END */
+  
+  /* SERVICE STYLES START */
+  .services {
+    background: var(--primary-color); 
+  }
+  
+  .service-grid-wrapper {
     display: flex;
     width: 100%;
     justify-content: center;
-}
-
-.service-grid-container {
+  }
+  
+  .service-grid-container {
     background: lightyellow;
     width: 80%;
     display: grid;
     /* repeat(iterator, size) */
-
     grid-template-columns: 1fr repeat(2, 4fr);
     grid-template-rows: repeat(5, 1fr) 2fr;
-    border: 2px solid #024e76;
-    color: #024e76;
-    font-size: 18px;
-
+    border: 2px solid var(--secondary-color);
+    color:  var(--secondary-color);
+    font-size: 1.2rem;
   }
-
-.service-grid-item {
+  
+  .service-grid-item {
     padding: 15px 0;
-    border: 2px solid #024e76;
+    border: 2px solid var(--secondary-color);
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-}
-
-/* specific match */
-.service-grid-item.basic {
+  }
+  
+  .service-grid-item.basic {
     grid-column: 2 / span 1;
-}
-
-.service-grid-item.both {
+  }
+  
+  .service-grid-item.both {
     grid-column: 2 / span 2;
   }
-
-.service-grid-item.cancel {
+  
+  .service-grid-item.cancel {
     writing-mode: vertical-lr;
-    transform: rotate(180deg);
     grid-column: 1;
     grid-row: 1 / -1;
-}
-
-.grid-head, .grid-price, .service-grid-item.cancel {
+    transform: rotate(180deg);
+  }
+  
+  .grid-head, .grid-price, .service-grid-item.cancel {
     font-size: 1.5rem;
     font-weight: bold;
-}
-
-
-/* Reach out styles start */
-.contact {
-
-    background: #024e76;
-    
-}
-.contact-info {
+  }
+  /* SERVICE STYLES END */
+  
+  /* REACH OUT STYLES START */
+  .contact {
+    background: var(--secondary-color);
+  }
+  
+  .contact h2 {
+    color: var(--primary-color);
+  }
+  
+  .contact-info {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-
-}
-
-.contact-info > * {
-    flex:1;
+  }
+  
+  .contact-info > * {
+    flex: 1;
     margin: 15px;
-}
-.contact h2 {
-    color: #fce138;
-}
-.contact-info iframe {
+  }
+  
+  .contact-info iframe {
     height: 400px;
   }
   
   .contact-info div {
     color: white;
   }
-
-.contact-info h3 {
-    color: #fce138;
+  
+  .contact-info h3 {
+    color: var(--primary-color);
     font-size: 32px;
   }
   
@@ -461,159 +474,185 @@ section{
     font-size: 16px;
     font-style: normal;
   }
-
-  .contact-info a {
-    color: #fce138;
+  
+  .contact-form input, .contact-form textarea {
+    border: 1px solid var(--secondary-color);
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: var(--secondary-color);
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
   }
-
-  .contact-form input, .contact-form textarea{
-      border: 1px solid #024e76;
-      background-color: rgba(255,255,255, 0.75);
-      display: block;
-      padding: 7px 15px;
-      font-size: 16px;
-      color: #024e76;
-      width: 100%;
-      margin-bottom: 15px;
-      margin-top: 5px;
-      border-radius: 10px;
-  }
-
-  .contact-form input:focus {
+  
+  .contact-form input:focus, .contact-form textarea:focus {
     background-color: rgba(255,255,255, 1);
     outline: none;
   }
-
-  .contact-form textarea:focus{
-    background-color: rgba(255,255,255, 1);
-    outline: none; 
-  }
   
-.contact-form button {
+  .contact-form button {
     width: 100%;
     border: none;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
     border-radius: 10px;
-}
-
-
-
-/* Media Query for Smaller Desktop Screens and Smaller */
-@media screen and (max-width:980px) {
+  }
+  
+  .contact-form button:hover {
+    color: var(--primary-color);
+    background: var(--tertiary-color);
+  }
+  
+  .contact-info a {
+    color: var(--primary-color);
+  }
+  
+  
+  /* REACH OUT STYLES END */
+  
+  /* UTILITIES */
+  .text-left {
+    text-align: left;
+  }
+  
+  .text-right {
+    text-align: right;
+  }
+  
+  .flex-row {
+    display: flex;
+  }
+  
+  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+  @media screen and (max-width: 980px) {
     header {
-        padding-bottom: 0;
-        justify-content: center;
-        position: relative;
+      padding-bottom: 0;
+      justify-content: center;
+      position: relative;
     }
+  
     header h1 {
-        width: 100%;
-        text-align: center;
+      width: 100%;
+      text-align: center;
     }
+  
     header nav ul {
-        margin-top: 20px;
-        width: 100%;
-        justify-content: center;
+      margin-top: 20px;
+      width: 100%;
+      justify-content: center;
     }
-
+  
     header nav ul li a {
-        text-align: center;
-        width: 100%;
-
+      font-size: 20px;
     }
+  
+    footer h2, footer div {
+      text-align: center;
+      width: 100%;
+    }
+  
     .hero-cta, .hero-form {
-        width: 100%;
+      width: 100%;
     }
-
-    .hero-cta{
-        text-align: center;
+    
+    .hero-cta {
+      text-align: center;
     }
-
+  
     .section-title {
-        width: 80%;
+      width: 80%;
     }
-
+    
     .trainer {
-        flex: 0 70%;
+      flex: 0 70%;
     }
-
-    .contact-info iframe {
-        flex: 1 100%;
+    
+    .contact-info iframe{
+      flex: 1 100%;
     }
-}
-
-/* Media Query for Tablets and Smaller */
-
-@media screen and (max-width: 768px) {
+  }
+  
+  /* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 768px) {
     section {
-        padding: 30px 15px;
+      padding: 30px 15px;
     }
-
+  
     .step h3 {
-        flex: 1 100%;
-        text-align: center;
-      }
+      flex: 1 100%;
+      text-align: center;
+    }
+  
+    .step-info {
+      flex: 2 100%;
+      text-align: center;
+      justify-content: center;
+    }
+  
+    .step-img {
+      flex: 0 32%;
+      margin-right: 0;
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
+  
+    .step-text {
+      flex: 100%;  
+    }
     
-      .step-info {
-        flex: 2 100%;
-        text-align: center;
-        justify-content: center;
-      }
-    
-      .step-img {
-        flex: 0 32%;
-        margin-right: 0;
-        margin-top: 15px;
-        margin-bottom: 15px;
-      }
-    
-      .step-text {
-        flex: 100%;  
-      }
-
     .service-grid-container {
-        grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
     }
-
+  
     .service-grid-item.basic {
-        grid-column: 1;
-    
+      grid-column: 1;
     }
-
+  
+    .service-grid-item.both {
+      grid-column: 1 / -1;
+    }
+  
     .service-grid-item.cancel {
-        transform: none;
-        writing-mode: unset;
-        grid-column: 1 / -1;
-        grid-row: -1;
+      transform: none;
+      writing-mode: unset;
+      grid-column: 1 / -1;
+      grid-row: -1;
     }
-
-}
-
-/* Media Query for Phones and Smaller */
-@media screen and (max-width: 575px) {
+  }
+  
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+  @media screen and (max-width: 575px) {
     .hero-form button {
-        width: 100%;
+      width: 100%;
     }
+  
     .section-title {
-        width: 95%;
+      width: 95%;
     }
+  
     .intro p {
-        width: 100%;
+      width: 100%;
     }
+  
     .trainer {
-        flex: 0 100%;
+      flex: 0 100%;
     }
+  
     .contact-info {
-        text-align: center;
+      text-align: center;
     }
+  
     .contact-info > * {
-        flex: 0 100%;
+      flex: 0 100%;
     }
+  
     .contact-form {
-        order: 3;
+      order: 3;
     }
-
-}
+  }
